@@ -1,5 +1,16 @@
 2002-01-25  Don Porter <dgp@users.sourceforge.net>
 
+	* Following is [Patch 501006]
+	* generic/tclInt.decls (Tcl_AddInterpResolvers, Tcl_Export,
+	  Tcl_FindNamespace, Tcl_GetInterpResolvers, Tcl_ForgetImport,
+	  Tcl_Import, Tcl_RemoveInterpResolvers):
+	* generic/tclNamesp.c (Tcl_Export, Tcl_Import, Tcl_ForgetImport,
+	  Tcl_FindNamespace):
+	* generic/tclResolve.c (Tcl_AddInterpResolvers,Tcl_GetInterpResolvers,
+	  Tcl_RemoveInterpResolvers): Updated APIs in generic/tclResolve.c
+	and generic/tclNamesp.c according to the guidelines of TIP 27.
+	* generic/tclIntDecls.h: make genstubs
+
 	* Following is [Patch 505630]
 	* doc/AddErrorInfo.3:
 	* generic/tcl.decls (Tcl_LogCommandInfo):
